--- a/404.html
+++ b/404.html
@@ -1,16 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=PT+Mono&display=swap"
+      rel="stylesheet"
+    />
 
-    <title>Danish</title>
-    
-    <link rel="icon" href="#">
-    <link rel="stylesheet" href="/error.css">
+    <title>Danish | Error</title>
 
-</head>
-<body>
-
-</body>
+    <link rel="icon" href="#" />
+    <link rel="stylesheet" href="/error.css" />
+  </head>
+  <body>
+    <div class="first">Got Lost?</div>
+    <div class="second">
+      Head back to my <a href="https://danish.dev">website</a> or to my
+      <a href="https://github.com/dan10ish">GitHub Profile</a>
+    </div>
+  </body>
 </html>
