--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,17 @@
     <meta charset="utf-8" />
     <link rel="icon" href="./danIcon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#ffffff" />
+    <meta name="theme-color" content="#d4d4d4" />
     <meta name="robots" content="index,follow" />
     <meta name="description" content="Danish (Student | Creative Enthusiast)" />
     <link rel="apple-touch-icon" href="./danIcon.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300;400;500;600&display=swap"
+      rel="stylesheet"
+    />
     <title>Danish Ansari</title>
   </head>
   <body>
