--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="./danIcon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#eeeeee" />
     <meta name="robots" content="index,follow" />
     <meta name="description" content="Danish (Student | Creative Enthusiast)" />
     <link rel="apple-touch-icon" href="./danIcon.png" />
