--- a/public/index.html
+++ b/public/index.html
@@ -2,17 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="./danIcon.png" />
+    <link rel="icon" href="./assets/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#eeeeee" />
-    <meta name="robots" content="index,follow" />
+    <meta name="theme-color" content="#dfdfdf" />
     <meta name="description" content="Danish (Student | Creative Enthusiast)" />
-    <link rel="apple-touch-icon" href="./danIcon.png" />
+    <link rel="apple-touch-icon" href="./assets/icon.png" />
+
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300;400;500;600&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,700;1,800&family=Space+Mono:wght@400;700&display=swap"
       rel="stylesheet"
     />
     <title>Danish Ansari</title>
