--- a/public/index.html
+++ b/public/index.html
@@ -4,15 +4,14 @@
     <meta charset="utf-8" />
     <link rel="icon" href="./assets/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#dfdfdf" />
+    <meta name="theme-color" content="#ffffff" />
     <meta name="description" content="Danish (Student | Creative Enthusiast)" />
     <link rel="apple-touch-icon" href="./assets/icon.png" />
-
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,700;1,800&family=Space+Mono:wght@400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Azeret+Mono:wght@100;200;300;400;500;600;700;800;900&family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Roboto:wght@100;300;400;500;700;900&display=swap"
       rel="stylesheet"
     />
     <title>Danish Ansari</title>
