--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="./assets/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#f1f1f2" />
     <meta name="description" content="Danish (Student | Creative Enthusiast)" />
     <link rel="apple-touch-icon" href="./assets/icon.png" />
     <!--
