🤘 Added meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,23 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
+    <meta property="og:title" content="Danish Ansari" />
+    <meta property="og:description" content="Student | Creative Enthusiast" />
+    <meta property="og:url" content="https://danishansari.in" />
+    <meta property="og:site_name" content="Danish Ansari" />
+    <meta
+      property="og:image"
+      content="https://github.com/dan10ish/dan10ish/blob/master/Resources/og.png?raw=true"
+    />
+
+    <meta property="twitter:title" content="Danish Ansari" />
+    <meta property="og:description" content="Student | Creative Enthusiast" />
+    <meta property="twitter:site" content="@dan10ish" />
+    <meta property="twitter:creator" content="@dan10ish" />
+    <meta
+      property="twitter:image"
+      content="https://github.com/dan10ish/dan10ish/blob/master/Resources/og.png?raw=true"
+    />
     <title>Danish Ansari</title>
   </head>
   <body>
