Redone the site ✨

--- a/public/index.html
+++ b/public/index.html
@@ -4,20 +4,17 @@
     <meta charset="utf-8" />
     <link rel="icon" href="./assets/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#f1f1f2" />
+    <meta name="theme-color" content="#ffffff" />
     <meta name="description" content="Danish (Student | Creative Enthusiast)" />
     <link rel="apple-touch-icon" href="./assets/icon.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap"
       rel="stylesheet"
     />
+
     <meta property="og:title" content="Danish Ansari" />
     <meta property="og:description" content="Student | Creative Enthusiast" />
     <meta property="og:url" content="https://danishansari.in" />
