--- a/public/index.html
+++ b/public/index.html
@@ -19,13 +19,13 @@
     <meta property="og:description" content="Student | Creative Enthusiast" />
     <meta property="og:url" content="https://danishansari.in" />
     <meta property="og:site_name" content="Danish Ansari" />
-    <meta property="og:image" content="https://i.ibb.co/mTXSs92/og.png" />
+    <meta property="og:image" content="https://i.ibb.co/GJ45Td9/og.png" />
 
     <meta property="twitter:title" content="Danish Ansari" />
     <meta property="og:description" content="Student | Creative Enthusiast" />
     <meta property="twitter:site" content="@dan10ish" />
     <meta property="twitter:creator" content="@dan10ish" />
-    <meta property="twitter:image" content="https://i.ibb.co/mTXSs92/og.png" />
+    <meta property="twitter:image" content="https://i.ibb.co/GJ45Td9/og.png" />
     <title>Danish Ansari</title>
   </head>
   <body>
