--- a/public/index.html
+++ b/public/index.html
@@ -1,31 +1,37 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="./assets/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#ffffff" />
-    <meta name="description" content="Danish (Student | Creative Enthusiast)" />
-    <link rel="apple-touch-icon" href="./assets/icon.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <meta name="theme-color" content="#012B36" />
+    <meta
+      name="description"
+      content="Danish's Website"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="apple-touch-icon" href="./assets/icon.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+   
+    <meta name="twitter:image:src" content="https://i.ibb.co/N7fg6NG/link-Preview.png"/>
+    <meta name="twitter:site" content="@dan10ish"/>
+    <meta name="twitter:card" content="summary"/>
+    <meta name="twitter:title" content="Danish's Website"/>
+    <meta name="twitter:description" content="Danish's personal portfolio website"/>
+    <meta property="og:image" content="https://i.ibb.co/N7fg6NG/link-Preview.png"/>
+    <meta property="og:image:alt" content="Danish's personal portfolio website"/>
+    <meta property="og:site_name" content="Danish Ansari"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:title" content="Danish Ansari"/>
+    <meta property="og:url" content="https://danishansari.in"/>
+    <meta property="og:description" content="Danish's personal portfolio website"/>
+    <meta property="profile:username" content="dan10ish"/> 
 
-    <meta property="og:title" content="Danish Ansari" />
-    <meta property="og:description" content="Student | Creative Enthusiast" />
-    <meta property="og:url" content="https://danishansari.in" />
-    <meta property="og:site_name" content="Danish Ansari" />
-    <meta property="og:image" content="https://i.ibb.co/GJ45Td9/og.png" />
-
-    <meta property="twitter:title" content="Danish Ansari" />
-    <meta property="og:description" content="Student | Creative Enthusiast" />
-    <meta property="twitter:site" content="@dan10ish" />
-    <meta property="twitter:creator" content="@dan10ish" />
-    <meta property="twitter:image" content="https://i.ibb.co/GJ45Td9/og.png" />
     <title>Danish Ansari</title>
   </head>
   <body>
@@ -36,7 +42,7 @@
       const interval = setInterval(() => {
         document.title = showingAlert
           ? "Danish Ansari"
-          : "Student | Creative Enthusiast";
+          : "Creative Enthusiast";
         showingAlert = !showingAlert;
       }, 5000);
     </script>
