--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,11 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="./assets/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#012B36" />
-    <meta
-      name="description"
-      content="Danish's Website"
-    />
+    <meta name="theme-color" content="#000000" />
+    <meta name="description" content="Danish's Website" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -17,20 +14,35 @@
     />
     <link rel="apple-touch-icon" href="./assets/icon.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-   
-    <meta name="twitter:image:src" content="https://i.ibb.co/N7fg6NG/link-Preview.png"/>
-    <meta name="twitter:site" content="@dan10ish"/>
-    <meta name="twitter:card" content="summary"/>
-    <meta name="twitter:title" content="Danish's Website"/>
-    <meta name="twitter:description" content="Danish's personal portfolio website"/>
-    <meta property="og:image" content="https://i.ibb.co/N7fg6NG/link-Preview.png"/>
-    <meta property="og:image:alt" content="Danish's personal portfolio website"/>
-    <meta property="og:site_name" content="Danish Ansari"/>
-    <meta property="og:type" content="website"/>
-    <meta property="og:title" content="Danish Ansari"/>
-    <meta property="og:url" content="https://danishansari.in"/>
-    <meta property="og:description" content="Danish's personal portfolio website"/>
-    <meta property="profile:username" content="dan10ish"/> 
+
+    <meta
+      name="twitter:image:src"
+      content="https://i.ibb.co/N7fg6NG/link-Preview.png"
+    />
+    <meta name="twitter:site" content="@dan10ish" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="Danish's Website" />
+    <meta
+      name="twitter:description"
+      content="Danish's personal portfolio website"
+    />
+    <meta
+      property="og:image"
+      content="https://i.ibb.co/N7fg6NG/link-Preview.png"
+    />
+    <meta
+      property="og:image:alt"
+      content="Danish's personal portfolio website"
+    />
+    <meta property="og:site_name" content="Danish Ansari" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Danish Ansari" />
+    <meta property="og:url" content="https://danishansari.in" />
+    <meta
+      property="og:description"
+      content="Danish's personal portfolio website"
+    />
+    <meta property="profile:username" content="dan10ish" />
 
     <title>Danish Ansari</title>
   </head>
@@ -40,9 +52,7 @@
     <script>
       let showingAlert = false;
       const interval = setInterval(() => {
-        document.title = showingAlert
-          ? "Danish Ansari"
-          : "Creative Enthusiast";
+        document.title = showingAlert ? "Danish Ansari" : "Creative Enthusiast";
         showingAlert = !showingAlert;
       }, 5000);
     </script>
