--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,10 @@
       href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="apple-touch-icon" href="./assets/icon.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
