--- a/public/index.html
+++ b/public/index.html
@@ -4,24 +4,21 @@
     <meta charset="utf-8" />
     <link rel="icon" href="./assets/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#ffffff" />
     <meta name="description" content="Danish's Website" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="apple-touch-icon" href="./assets/icon.png" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=DM+Mono:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&display=swap"
       rel="stylesheet"
     />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="apple-touch-icon" href="./assets/icon.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <meta
       name="twitter:image:src"
-      content="https://i.ibb.co/N7fg6NG/link-Preview.png"
+      content="https://i.ibb.co/wJQP7BB/last.png"
     />
     <meta name="twitter:site" content="@dan10ish" />
     <meta name="twitter:card" content="summary" />
@@ -30,10 +27,7 @@
       name="twitter:description"
       content="Danish's personal portfolio website"
     />
-    <meta
-      property="og:image"
-      content="https://i.ibb.co/N7fg6NG/link-Preview.png"
-    />
+    <meta property="og:image" content="https://i.ibb.co/wJQP7BB/last.png" />
     <meta
       property="og:image:alt"
       content="Danish's personal portfolio website"
