--- a/public/404.html
+++ b/public/404.html
@@ -3,20 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=PT+Mono&display=swap"
-      rel="stylesheet"
-    />
+    <meta name="theme-color" content="#ffffff" />
 
-    <title>Danish | Error</title>
+    <title>Danish Ansari</title>
 
     <link rel="icon" href="./assets/icon.png" />
-    <link rel="stylesheet" href="/error.css" />
 
     <script type="text/javascript">
-      var pathSegmentsToKeep = 1;
+      var pathSegmentsToKeep = 0;
 
       var l = window.location;
       l.replace(
@@ -40,11 +34,5 @@
       );
     </script>
   </head>
-  <body>
-    <div class="first">Got Lost?</div>
-    <div class="second">
-      Head back to my <a href="https://danishansari.in">website</a> or to my
-      <a href="https://github.com/dan10ish">GitHub Profile</a>
-    </div>
-  </body>
+  <body></body>
 </html>
