📷 Added Link preview

--- a/public/index.html
+++ b/public/index.html
@@ -15,10 +15,7 @@
       rel="stylesheet"
     />
 
-    <meta
-      name="twitter:image:src"
-      content="https://i.ibb.co/wJQP7BB/last.png"
-    />
+    <meta name="twitter:image" content="./assets/LinkPreview.png" />
     <meta name="twitter:site" content="@dan10ish" />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="Danish's Website" />
@@ -26,7 +23,7 @@
       name="twitter:description"
       content="Danish's personal portfolio website"
     />
-    <meta property="og:image" content="https://i.ibb.co/wJQP7BB/last.png" />
+    <meta property="og:image" content="./assets/LinkPreview.png" />
     <meta
       property="og:image:alt"
       content="Danish's personal portfolio website"
@@ -34,7 +31,7 @@
     <meta property="og:site_name" content="Danish Ansari" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Danish Ansari" />
-    <meta property="og:url" content="https://danishansari.in" />
+    <meta property="og:url" content="https://danish.bio" />
     <meta
       property="og:description"
       content="Danish's personal portfolio website"
