--- a/public/index.html
+++ b/public/index.html
@@ -16,9 +16,15 @@
       gtag("config", "G-6LYF1S3DR1");
     </script>
     <meta charset="utf-8" />
+
     <link rel="icon" href="./assets/icon.png" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#ffffff" />
+
+    <meta name="robots" content="index,follow" />
+    <meta name="robots" content="nocache" />
+
     <meta name="description" content="Danish's Website" />
     <link rel="apple-touch-icon" href="./assets/icon.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
@@ -29,18 +35,14 @@
       rel="stylesheet"
     />
 
-    <meta name="twitter:image" content="./assets/LinkPreview.png" />
     <meta name="twitter:site" content="@dan10ish" />
-    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Danish's Website" />
+    <meta name="twitter:description" content="Danish's personal website" />
+
     <meta
-      name="twitter:description"
-      content="Danish's personal portfolio website"
-    />
-    <meta property="og:image" content="./assets/LinkPreview.png" />
-    <meta
-      property="og:image:alt"
-      content="Danish's personal portfolio website"
+      property="og:image"
+      content="https://i.ibb.co/xYpLtw6/Link-Preview.png"
     />
     <meta property="og:site_name" content="Danish Ansari" />
     <meta property="og:type" content="website" />
@@ -50,6 +52,7 @@
       property="og:description"
       content="Danish's personal portfolio website"
     />
+
     <meta property="profile:username" content="dan10ish" />
 
     <title>Danish Ansari</title>
