📷 Added Twitter card

--- a/public/index.html
+++ b/public/index.html
@@ -36,9 +36,14 @@
     />
 
     <meta name="twitter:site" content="@dan10ish" />
+    <meta name="twitter:creator" content="@dan10ish" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Danish's Website" />
     <meta name="twitter:description" content="Danish's personal website" />
+    <meta
+      name="twitter:image"
+      content="https://i.ibb.co/xYpLtw6/Link-Preview.png"
+    />
 
     <meta
       property="og:image"
