--- a/public/index.html
+++ b/public/index.html
@@ -1,56 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Google tag (gtag.js) -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=G-6LYF1S3DR1"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
-
-      gtag("config", "G-6LYF1S3DR1");
-    </script>
     <meta charset="utf-8" />
 
     <link rel="icon" href="./assets/icon.png" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
     <meta name="theme-color" content="#ffffff" />
 
     <meta name="robots" content="index,follow" />
     <meta name="robots" content="nocache" />
 
-    <meta name="description" content="Danish's Website" />
+    <meta name="description" content="Danish's website" />
+
     <link rel="apple-touch-icon" href="./assets/icon.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <link rel="manifest" href="./manifest.json" />
 
     <meta name="twitter:site" content="@dan10ish" />
     <meta name="twitter:creator" content="@dan10ish" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Danish's Website" />
     <meta name="twitter:description" content="Danish's personal website" />
-    <meta
-      name="twitter:image"
-      content="https://i.ibb.co/xYpLtw6/Link-Preview.png"
-    />
+    <meta name="twitter:image" content="./assets/LinkPreview.png" />
 
-    <meta
-      property="og:image"
-      content="https://i.ibb.co/xYpLtw6/Link-Preview.png"
-    />
+    <meta property="og:image" content="./assets/LinkPreview.png" />
     <meta property="og:site_name" content="Danish Ansari" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Danish Ansari" />
     <meta property="og:url" content="https://danish.bio" />
-    <meta
-      property="og:description"
-      content="Danish's personal portfolio website"
-    />
+    <meta property="og:description" content="Danish's personal website" />
 
     <meta property="profile:username" content="dan10ish" />
 
@@ -78,12 +58,5 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <script>
-      let showingAlert = false;
-      const interval = setInterval(() => {
-        document.title = showingAlert ? "Danish Ansari" : "Creative Enthusiast";
-        showingAlert = !showingAlert;
-      }, 5000);
-    </script>
   </body>
 </html>
