🛠️ Fixed link preview

--- a/public/index.html
+++ b/public/index.html
@@ -23,9 +23,15 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Danish's Website" />
     <meta name="twitter:description" content="Danish's personal website" />
-    <meta name="twitter:image" content="./assets/LinkPreview.png" />
+    <meta
+      name="twitter:image"
+      content="https://i.ibb.co/xYpLtw6/Link-Preview.png"
+    />
 
-    <meta property="og:image" content="./assets/LinkPreview.png" />
+    <meta
+      property="og:image"
+      content="https://i.ibb.co/xYpLtw6/Link-Preview.png"
+    />
     <meta property="og:site_name" content="Danish Ansari" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Danish Ansari" />
