--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     <meta name="twitter:title" content="Danish's Website" />
     <meta name="twitter:description" content="Danish's personal website" />
     <meta
-      name="twitter:image"
+      name="twitter:image:src"
       content="https://i.ibb.co/xYpLtw6/Link-Preview.png"
     />
 
