--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <meta name="theme-color" content="#ffffff" />
+    <meta name="theme-color" content="#dad9d2" />
 
     <meta name="robots" content="index,follow" />
     <meta name="robots" content="nocache" />
