📷 Link Preview Updated

--- a/public/index.html
+++ b/public/index.html
@@ -25,12 +25,12 @@
     <meta name="twitter:description" content="Danish's personal website" />
     <meta
       name="twitter:image:src"
-      content="https://i.ibb.co/xYpLtw6/Link-Preview.png"
+      content="https://i.ibb.co/KxnZsjV/Link-Preview.png"
     />
 
     <meta
       property="og:image"
-      content="https://i.ibb.co/xYpLtw6/Link-Preview.png"
+      content="https://i.ibb.co/KxnZsjV/Link-Preview.png"
     />
     <meta property="og:site_name" content="Danish Ansari" />
     <meta property="og:type" content="website" />
