--- a/public/index.html
+++ b/public/index.html
@@ -1,68 +1,72 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
+    <head>
+        <meta charset="utf-8" />
 
-    <link rel="icon" href="./assets/icon.png" />
+        <link rel="icon" href="./assets/icon.png" />
 
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <meta name="theme-color" content="#000000" />
+        <meta name="theme-color" content="#ffffff" />
 
-    <meta name="robots" content="index,follow" />
-    <meta name="robots" content="nocache" />
+        <meta name="robots" content="index,follow" />
+        <meta name="robots" content="nocache" />
 
-    <meta name="description" content="Danish's website" />
+        <meta name="description" content="Danish's website" />
 
-    <link rel="apple-touch-icon" href="./assets/icon.png" />
+        <link rel="apple-touch-icon" href="./assets/icon.png" />
 
-    <link rel="manifest" href="./manifest.json" />
+        <link rel="manifest" href="./manifest.json" />
 
-    <meta name="twitter:site" content="@dan10ish" />
-    <meta name="twitter:creator" content="@dan10ish" />
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Danish's Website" />
-    <meta name="twitter:description" content="Danish's personal website" />
-    <meta
-      name="twitter:image:src"
-      content="https://i.ibb.co/KxnZsjV/Link-Preview.png"
-    />
+        <meta name="twitter:site" content="@dan10ish" />
+        <meta name="twitter:creator" content="@dan10ish" />
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta name="twitter:title" content="Danish's Website" />
+        <meta name="twitter:description" content="Danish's personal website" />
+        <meta
+            name="twitter:image"
+            content="https://i.ibb.co/xYpLtw6/Link-Preview.png"
+        />
 
-    <meta
-      property="og:image"
-      content="https://i.ibb.co/KxnZsjV/Link-Preview.png"
-    />
-    <meta property="og:site_name" content="Danish Ansari" />
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="Danish Ansari" />
-    <meta property="og:url" content="https://danish.bio" />
-    <meta property="og:description" content="Danish's personal website" />
+        <meta
+            property="og:image"
+            content="https://i.ibb.co/xYpLtw6/Link-Preview.png"
+        />
+        <meta property="og:image:type" content="image/png" />
+        <meta property="og:image:width" content="1200" />
+        <meta property="og:image:height" content="675" />
 
-    <meta property="profile:username" content="dan10ish" />
+        <meta property="og:site_name" content="Danish Ansari" />
+        <meta property="og:type" content="website" />
+        <meta property="og:title" content="Danish Ansari" />
+        <meta property="og:url" content="https://danish.bio" />
+        <meta property="og:description" content="Danish's personal website" />
 
-    <title>Danish Ansari</title>
+        <meta property="profile:username" content="dan10ish" />
 
-    <script type="text/javascript">
-      (function (l) {
-        if (l.search[1] === "/") {
-          var decoded = l.search
-            .slice(1)
-            .split("&")
-            .map(function (s) {
-              return s.replace(/~and~/g, "&");
-            })
-            .join("?");
-          window.history.replaceState(
-            null,
-            null,
-            l.pathname.slice(0, -1) + decoded + l.hash
-          );
-        }
-      })(window.location);
-    </script>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-  </body>
+        <title>Danish Ansari</title>
+
+        <script type="text/javascript">
+            (function (l) {
+                if (l.search[1] === "/") {
+                    var decoded = l.search
+                        .slice(1)
+                        .split("&")
+                        .map(function (s) {
+                            return s.replace(/~and~/g, "&");
+                        })
+                        .join("?");
+                    window.history.replaceState(
+                        null,
+                        null,
+                        l.pathname.slice(0, -1) + decoded + l.hash,
+                    );
+                }
+            })(window.location);
+        </script>
+    </head>
+    <body>
+        <noscript>You need to enable JavaScript to run this app.</noscript>
+        <div id="root"></div>
+    </body>
 </html>
