--- a/index.html
+++ b/index.html
@@ -2,9 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+
     <meta name="theme-color" content="#f5f0e5" />
+
     <link rel="icon" href="./assets/icon.png" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <meta name="robots" content="index,follow" />
+    <meta name="robots" content="nocache" />
+
+    <meta
+      name="description"
+      content="Danish's website containing his writings and projects"
+    />
+
+    <link rel="manifest" href="./manifest.json" />
 
     <meta name="twitter:site" content="@dan10ish" />
     <meta name="twitter:creator" content="@dan10ish" />
@@ -30,10 +43,11 @@
     <meta property="og:url" content="https://danish.bio" />
     <meta
       property="og:description"
-      content="Danish's website containing his projects and writings."
+      content="Danish's website containing writings and projects."
     />
 
     <meta property="profile:username" content="dan10ish" />
+
     <title>Danish</title>
   </head>
   <body>
