--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
 
     <link rel="icon" href="./assets/icon.png" />
 
+    <link
+      rel="preload"
+      href="/fonts/Sentient.ttf"
+      as="font"
+      type="font/ttf"
+      crossorigin
+    />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <meta name="robots" content="index,follow" />
