--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
 
-    <meta name="theme-color" content="#f5f0e5" />
+    <meta name="theme-color" content="#ffffff" />
 
     <link rel="icon" href="./assets/icon.png" />
 
