--- a/public/404 copy.html
+++ b/public/404 copy.html
@@ -1,10 +1,9 @@
 <!doctype html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="utf-8" />
+    <title>404 - Page Not Found</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>404 | Danish</title>
-    <link rel="icon" type="image/png" href="/icons/icon.png" />
     <script>
       var redirect = function () {
         var segmentCount = 0;
@@ -33,80 +32,94 @@
       };
       (function () {
         try {
-          const sessionTheme = sessionStorage.getItem("theme");
+          const savedTheme = localStorage.getItem("theme");
+          const computedTheme = localStorage.getItem("computedTheme");
+          if (computedTheme) {
+            document.documentElement.setAttribute("data-theme", computedTheme);
+            return;
+          }
           const prefersDark = window.matchMedia(
             "(prefers-color-scheme: dark)",
           ).matches;
-          const effectiveTheme =
-            sessionTheme || (prefersDark ? "dark" : "light");
+          const theme = savedTheme || "system";
           const themeColors = {
             light: "#ffffff",
-            dark: "#1c1c1c",
-            solarized: "#00212b",
+            dark: "#09090b",
+            solarized: "#002b36",
+            manila: "#f3deaf",
           };
+          const effectiveTheme =
+            theme === "system" ? (prefersDark ? "dark" : "light") : theme;
           document.documentElement.setAttribute("data-theme", effectiveTheme);
-          const metaTheme =
-            document.querySelector('meta[name="theme-color"]') ||
-            document.createElement("meta");
-          metaTheme.name = "theme-color";
-          metaTheme.content = themeColors[effectiveTheme];
-          document.head.appendChild(metaTheme);
+          localStorage.setItem("computedTheme", effectiveTheme);
         } catch (e) {}
       })();
       window.onload = redirect;
     </script>
     <style>
-      :root {
-        --color-bg-rgb: 255, 255, 255;
-        --color-text-rgb: 51, 51, 51;
-        --color-bg: #ffffff;
-        --color-text: #18181b;
-        --color-link: #3b82f6;
-        color-scheme: light dark;
+      @font-face {
+        font-family: "Geist Mono";
+        src: url("/fonts/GeistMono.woff2") format("woff2-variations");
+        font-weight: 100 900;
+        font-stretch: 75% 125%;
+        font-style: oblique 0deg 12deg;
+        font-display: swap;
       }
-
-      [data-theme="light"] {
+      @font-face {
+        font-family: "Sentient";
+        src: url("/fonts/Sentient.woff2") format("woff2-variations");
+        font-weight: 100 900;
+        font-style: normal;
+        font-display: swap;
+      }
+      :root {
+        --font-normal: "Geist Mono", ui-monospace, "Cascadia Code", "SF Mono",
+          Menlo, Monaco, Consolas, monospace;
+        --font-heading: "Sentient", system-ui, -apple-system,
+          BlinkMacSystemFont, "Segoe UI", sans-serif;
         --color-bg: #ffffff;
         --color-text: #18181b;
         --color-link: #2563eb;
-        --color-bg-rgb: 255, 255, 255;
         --color-text-rgb: 24, 24, 27;
-        color-scheme: light;
+        --code-background-color: #edf2f7;
+        --blockquote-color: #64748b;
       }
-
       [data-theme="dark"] {
-        --color-bg: #1c1c1c;
+        --color-bg: #09090b;
         --color-text: #fafafa;
         --color-link: #3b82f6;
-        --color-bg-rgb: 28, 28, 28;
         --color-text-rgb: 250, 250, 250;
-        color-scheme: dark;
+        --code-background-color: #222222;
+        --blockquote-color: #94a3b8;
       }
-
       [data-theme="solarized"] {
         --color-bg: #002b36;
-        --color-text: #eee8d5;
+        --color-text: #c8d2d2;
         --color-link: #268bd2;
-        --color-bg-rgb: 0, 43, 54;
-        --color-text-rgb: 238, 232, 213;
-        color-scheme: dark;
+        --code-background-color: #073642;
+        --blockquote-color: #839496;
       }
-
+      [data-theme="manila"] {
+        --color-bg: #f3deaf;
+        --color-text: #26241f;
+        --color-link: #2563eb;
+        --code-background-color: #e6d19c;
+        --blockquote-color: #5f5d58;
+      }
       * {
-        box-sizing: border-box;
         margin: 0;
         padding: 0;
+        box-sizing: border-box;
       }
-
       html,
       body {
-        height: 100%;
-        font-family: ui-monospace, "SF Mono", Menlo, monospace;
-        line-height: 1.8;
+        height: 100vh;
+        height: 100dvh;
+        overflow: hidden;
         background: var(--color-bg);
         color: var(--color-text);
+        font-family: var(--font-normal);
       }
-
       .error-container {
         height: 100vh;
         height: 100dvh;
@@ -117,7 +130,6 @@
         inset: 0;
         background: var(--color-bg);
       }
-
       .error-content {
         flex: 1;
         display: flex;
@@ -127,65 +139,31 @@
         padding-top: 15vh;
         gap: 1.5rem;
       }
-
       .error-nav {
         padding-bottom: 2rem;
         display: flex;
         flex-direction: column;
         align-items: center;
-        gap: 1rem;
+        gap: 2rem;
       }
-
       .error-title {
-        font-size: 2.5rem;
+        font-family: var(--font-heading);
+        font-size: 2rem;
         font-weight: 500;
         color: var(--color-text);
-        margin: 2rem 0 0;
+        margin: 0;
       }
-
       .social-links {
         display: flex;
         align-items: center;
-        gap: 4rem;
+        gap: 1rem;
       }
-
-      .return-link {
-        font-family: ui-monospace, "SF Mono", Menlo, monospace;
-        font-size: 0.95rem;
-        color: var(--color-text);
-        text-decoration: none;
-        padding: 0.75rem 1.5rem;
-        background: rgba(var(--color-text-rgb), 0.05);
-        border-radius: 99px;
-        transition: all 0.2s ease;
-        border: 1px solid transparent;
-      }
-
-      .social-link {
-        color: var(--color-link);
-        text-decoration: none;
-        font-size: 0.95rem;
-        transition: color 0.2s ease;
-        padding: 1rem 1rem;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        border-radius: 8px;
-      }
-
-      .error-x-link svg {
-        color: var(--color-link);
-        width: auto;
-        height: 22px;
-      }
-
       .ghost-face {
         position: relative;
         width: 200px;
         margin: 0 auto;
         animation: shvr 0.2s infinite;
       }
-
       .ghost-face::after {
         content: "";
         width: 20px;
@@ -198,7 +176,6 @@
         box-shadow: 125px 0 0 var(--color-text);
         animation: eye 2.5s infinite;
       }
-
       .ghost-face::before {
         content: "";
         width: 8px;
@@ -212,7 +189,6 @@
         z-index: 1;
         animation: eye 2.5s infinite;
       }
-
       .meta {
         position: relative;
         display: inline-block;
@@ -222,27 +198,53 @@
         border-radius: 50% 50% 50% 50%/45px 45px 45% 45%;
         transform: rotate(45deg);
       }
-
       .meta::after {
         content: "";
         position: absolute;
         border-bottom: 2px solid var(--color-text);
         width: 70px;
         height: 50px;
-        left: 0px;
+        left: 0;
         bottom: -10px;
         border-radius: 50%;
       }
-
       .meta:nth-of-type(2) {
         float: right;
         transform: rotate(-45deg);
       }
-
       .meta:nth-of-type(2)::after {
         left: 5px;
       }
-
+      .return-link {
+        font-family: var(--font-normal);
+        font-size: 1rem;
+        color: var(--color-text);
+        text-decoration: none;
+        padding: 0.5rem 1.5rem;
+        background: var(--code-background-color);
+        border-radius: 99px;
+        transition: all 0.2s ease;
+        border: 1px solid transparent;
+      }
+      .return-link:hover {
+        border-color: var(--color-link);
+        transform: translateY(-1px);
+        text-decoration: none;
+      }
+      .social-link {
+        color: var(--color-link);
+        text-decoration: none;
+        font-size: 1rem;
+        transition: color 0.2s ease;
+      }
+      .social-link:hover {
+        text-decoration: none;
+        opacity: 0.8;
+      }
+      .divider {
+        color: var(--blockquote-color);
+        font-size: 1.1rem;
+      }
       @keyframes eye {
         0%,
         30%,
@@ -262,7 +264,6 @@
           transform: translate(20px, 0);
         }
       }
-
       @keyframes shvr {
         0% {
           transform: translate(1px, 1em);
@@ -274,80 +275,27 @@
           transform: translate(-1px, 1em);
         }
       }
-
-      @media (min-width: 768px) {
-        .error-title {
-          font-size: 3rem;
-        }
-        .return-link {
-          font-size: 1rem;
-          padding: 1rem 2rem;
-        }
-        .social-links {
-          gap: 5rem;
-        }
-        .social-link {
-          font-size: 1rem;
-        }
-      }
-
-      /* Hover Effects */
-      @media (hover: hover) and (pointer: fine) {
-        .return-link:hover {
-          border-color: var(--color-link);
-          text-decoration: none;
-        }
-        .social-link:hover {
-          background: rgba(var(--color-text-rgb), 0.05);
-        }
-        .social-link:hover svg {
-          transform: scale(1.2);
-        }
-      }
     </style>
   </head>
   <body>
-    <div class="error-container">
-      <div class="error-content">
-        <div class="ghost-face">
-          <div class="meta"></div>
-          <div class="meta"></div>
+    <div className="error-container">
+      <div className="error-content">
+        <div className="ghost-face">
+          <div className="meta" />
+          <div className="meta" />
         </div>
-        <h1 class="error-title">404</h1>
+        <h1 className="error-title">404</h1>
         <p>Page not found</p>
       </div>
 
-      <div class="error-nav">
-        <a href="/" class="return-link">Return to Homepage</a>
-        <div class="social-links">
-          <a href="https://github.com/dan10ish" class="social-link">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="24"
-              height="24"
-              viewBox="0 0 24 24"
-              fill="none"
-              stroke="currentColor"
-              stroke-width="2"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-            >
-              <path
-                d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"
-              ></path>
-            </svg>
+      <div className="error-nav">
+        <a href="/" className="return-link"> Return Home </a>
+        <div className="social-links">
+          <a href="https://github.com/dan10ish" className="social-link">
+            GitHub
           </a>
-          <a href="https://x.com/dan10ish" class="social-link error-x-link">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 512 512"
-              fill="currentColor"
-            >
-              <path
-                d="M389.2 48h70.6L305.6 224.2 487 464H345L233.7 318.6 106.5 464H35.8L200.7 275.5 26.8 48H172.4L272.9 180.9 389.2 48zM364.4 421.8h39.1L151.1 88h-42L364.4 421.8z"
-              />
-            </svg>
-          </a>
+          <span className="divider">·</span>
+          <a href="https://x.com/dan10ish" className="social-link"> Twitter </a>
         </div>
       </div>
     </div>
