Fixed 404 page UI and minor bugs

--- a/public/404.html
+++ b/public/404.html
@@ -55,300 +55,20 @@
       })();
       window.onload = redirect;
     </script>
-    <style>
-      :root {
-        --color-bg-rgb: 255, 255, 255;
-        --color-text-rgb: 51, 51, 51;
-        --color-bg: #ffffff;
-        --color-text: #18181b;
-        --color-link: #3b82f6;
-        color-scheme: light dark;
-      }
-
-      [data-theme="light"] {
-        --color-bg: #ffffff;
-        --color-text: #18181b;
-        --color-link: #2563eb;
-        --color-bg-rgb: 255, 255, 255;
-        --color-text-rgb: 24, 24, 27;
-        color-scheme: light;
-      }
-
-      [data-theme="dark"] {
-        --color-bg: #1c1c1c;
-        --color-text: #fafafa;
-        --color-link: #3b82f6;
-        --color-bg-rgb: 28, 28, 28;
-        --color-text-rgb: 250, 250, 250;
-        color-scheme: dark;
-      }
-
-      [data-theme="solarized"] {
-        --color-bg: #002b36;
-        --color-text: #eee8d5;
-        --color-link: #268bd2;
-        --color-bg-rgb: 0, 43, 54;
-        --color-text-rgb: 238, 232, 213;
-        color-scheme: dark;
-      }
-
-      * {
-        box-sizing: border-box;
-        margin: 0;
-        padding: 0;
-      }
-
-      html,
-      body {
-        height: 100%;
-        font-family: ui-monospace, "SF Mono", Menlo, monospace;
-        line-height: 1.8;
-        background: var(--color-bg);
-        color: var(--color-text);
-      }
-
-      .error-container {
-        height: 100vh;
-        height: 100dvh;
-        display: flex;
-        flex-direction: column;
-        padding: 2rem;
-        position: fixed;
-        inset: 0;
-        background: var(--color-bg);
-      }
-
-      .error-content {
-        flex: 1;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: flex-start;
-        padding-top: 15vh;
-        gap: 1.5rem;
-      }
-
-      .error-nav {
-        padding-bottom: 2rem;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 1rem;
-      }
-
-      .error-title {
-        font-size: 2.5rem;
-        font-weight: 500;
-        color: var(--color-text);
-        margin: 2rem 0 0;
-      }
-
-      .social-links {
-        display: flex;
-        align-items: center;
-        gap: 4rem;
-      }
-
-      .return-link {
-        font-family: ui-monospace, "SF Mono", Menlo, monospace;
-        font-size: 0.95rem;
-        color: var(--color-text);
-        text-decoration: none;
-        padding: 0.75rem 1.5rem;
-        background: rgba(var(--color-text-rgb), 0.05);
-        border-radius: 99px;
-        transition: all 0.2s ease;
-        border: 1px solid transparent;
-      }
-
-      .social-link {
-        color: var(--color-link);
-        text-decoration: none;
-        font-size: 0.95rem;
-        transition: color 0.2s ease;
-        padding: 1rem 1rem;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        border-radius: 8px;
-      }
-
-      .error-x-link svg {
-        color: var(--color-link);
-        width: auto;
-        height: 22px;
-      }
-
-      .ghost-face {
-        position: relative;
-        width: 200px;
-        margin: 0 auto;
-        animation: shvr 0.2s infinite;
-      }
-
-      .ghost-face::after {
-        content: "";
-        width: 20px;
-        height: 20px;
-        background: var(--color-text);
-        position: absolute;
-        top: 30px;
-        left: 25px;
-        border-radius: 50%;
-        box-shadow: 125px 0 0 var(--color-text);
-        animation: eye 2.5s infinite;
-      }
-
-      .ghost-face::before {
-        content: "";
-        width: 8px;
-        height: 8px;
-        background: var(--color-bg);
-        position: absolute;
-        top: 35px;
-        left: 30px;
-        border-radius: 50%;
-        box-shadow: 125px 0 0 var(--color-bg);
-        z-index: 1;
-        animation: eye 2.5s infinite;
-      }
-
-      .meta {
-        position: relative;
-        display: inline-block;
-        background: var(--color-text);
-        width: 75px;
-        height: 80px;
-        border-radius: 50% 50% 50% 50%/45px 45px 45% 45%;
-        transform: rotate(45deg);
-      }
-
-      .meta::after {
-        content: "";
-        position: absolute;
-        border-bottom: 2px solid var(--color-text);
-        width: 70px;
-        height: 50px;
-        left: 0px;
-        bottom: -10px;
-        border-radius: 50%;
-      }
-
-      .meta:nth-of-type(2) {
-        float: right;
-        transform: rotate(-45deg);
-      }
-
-      .meta:nth-of-type(2)::after {
-        left: 5px;
-      }
-
-      @keyframes eye {
-        0%,
-        30%,
-        55%,
-        90%,
-        100% {
-          transform: translate(0, 0);
-        }
-        10%,
-        25% {
-          transform: translate(0, 20px);
-        }
-        65% {
-          transform: translate(-20px, 0);
-        }
-        80% {
-          transform: translate(20px, 0);
-        }
-      }
-
-      @keyframes shvr {
-        0% {
-          transform: translate(1px, 1em);
-        }
-        50% {
-          transform: translate(0, 1em);
-        }
-        100% {
-          transform: translate(-1px, 1em);
-        }
-      }
-
-      @media (min-width: 768px) {
-        .error-title {
-          font-size: 3rem;
-        }
-        .return-link {
-          font-size: 1rem;
-          padding: 1rem 2rem;
-        }
-        .social-links {
-          gap: 5rem;
-        }
-        .social-link {
-          font-size: 1rem;
-        }
-      }
-
-      /* Hover Effects */
-      @media (hover: hover) and (pointer: fine) {
-        .return-link:hover {
-          border-color: var(--color-link);
-          text-decoration: none;
-        }
-        .social-link:hover {
-          background: rgba(var(--color-text-rgb), 0.05);
-        }
-        .social-link:hover svg {
-          transform: scale(1.2);
-        }
-      }
-    </style>
+    <link rel="stylesheet" href="./error.css" />
   </head>
   <body>
     <div class="error-container">
-      <div class="error-content">
-        <div class="ghost-face">
-          <div class="meta"></div>
-          <div class="meta"></div>
-        </div>
-        <h1 class="error-title">404</h1>
-        <p>Page not found</p>
+      <div class="ghost-face">
+        <div class="meta"></div>
+        <div class="meta"></div>
       </div>
-
+      <div class="error-title">
+        <div>Oops!</div>
+        <span class="p-nf">Page not found</span>
+      </div>
       <div class="error-nav">
-        <a href="/" class="return-link">Return to Homepage</a>
-        <div class="social-links">
-          <a href="https://github.com/dan10ish" class="social-link">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="24"
-              height="24"
-              viewBox="0 0 24 24"
-              fill="none"
-              stroke="currentColor"
-              stroke-width="2"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-            >
-              <path
-                d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"
-              ></path>
-            </svg>
-          </a>
-          <a href="https://x.com/dan10ish" class="social-link error-x-link">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 512 512"
-              fill="currentColor"
-            >
-              <path
-                d="M389.2 48h70.6L305.6 224.2 487 464H345L233.7 318.6 106.5 464H35.8L200.7 275.5 26.8 48H172.4L272.9 180.9 389.2 48zM364.4 421.8h39.1L151.1 88h-42L364.4 421.8z"
-              />
-            </svg>
-          </a>
-        </div>
+        <a href="/" class="return-link">← Go Back</a>
       </div>
     </div>
   </body>
