--- a/public/404.html
+++ b/public/404.html
@@ -6,7 +6,7 @@
     <title>404 | Danish</title>
     <script>(function(){document.documentElement.setAttribute("data-theme", window.matchMedia("(prefers-color-scheme: dark)").matches ? "dark" : "light")})()</script>
     <meta name="theme-color" media="(prefers-color-scheme: light)" content="#ffffff" />
-    <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#1c1c1c" />
+    <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#141414" />
     <link rel="icon" type="image/png" href="/icons/icon.png" />
     <link rel="stylesheet" href="./error.css" />
     <script>
