--- a/index.html
+++ b/index.html
@@ -5,8 +5,73 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <title>Danish Ansari</title>
+  <title>Danish Ansari - Frontend Software Engineer | React & Machine Learning Expert</title>
+  <meta name="description" content="Danish Ansari - Frontend Software Engineer & Mechatronics Developer. Expert in React, Node.js, Machine Learning, Robotics & Algorithm Visualization. Building solutions at the intersection of hardware and software." />
+  <meta name="keywords" content="Danish Ansari, Software Engineer, Frontend Developer, Mechatronics Engineer, React Developer, Machine Learning, Robotics, Algorithm Visualization, MERN Stack, JavaScript, Python, C++, Portfolio, Web Developer, Full Stack Developer, AI, Pathfinding, 3DOF Robotic Arm, dan10ish" />
+  <meta name="author" content="Danish Ansari" />
+  <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
   <meta name="theme-color" content="#11112D" />
+  <meta property="og:title" content="Danish Ansari - Frontend Software Engineer & Mechatronics Developer" />
+  <meta property="og:description" content="Frontend SWE at Cridaa | Expert in React, Node.js, Machine Learning & Robotics | Building innovative solutions at the intersection of hardware and software | Portfolio showcasing 13+ projects" />
+  <meta property="og:image" content="https://i.ibb.co/bQpCQ1J/OG.png" />
+  <meta property="og:image:alt" content="Danish Ansari - Software Engineer Portfolio" />
+  <meta property="og:url" content="https://dan10ish.github.io" />
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="Danish Ansari Portfolio" />
+  <meta property="og:locale" content="en_US" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:image:type" content="image/png" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@dan10ish" />
+  <meta name="twitter:creator" content="@dan10ish" />
+  <meta name="twitter:title" content="Danish Ansari - Frontend Software Engineer & Mechatronics Developer" />
+  <meta name="twitter:description" content="Frontend SWE at Cridaa | Expert in React, Node.js, Machine Learning & Robotics | Building innovative solutions at the intersection of hardware and software" />
+  <meta name="twitter:image" content="https://i.ibb.co/bQpCQ1J/OG.png" />
+  <meta name="twitter:image:alt" content="Danish Ansari - Software Engineer Portfolio" />
+  <meta property="article:author" content="Danish Ansari" />
+  <meta name="linkedin:owner" content="dan10ish" />
+  <link rel="canonical" href="https://dan10ish.github.io" />
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Person",
+    "name": "Danish Ansari",
+    "url": "https://dan10ish.github.io",
+    "image": "https://i.ibb.co/bQpCQ1J/OG.png",
+    "jobTitle": "Frontend Software Engineer",
+    "worksFor": {
+      "@type": "Organization",
+      "name": "Cridaa"
+    },
+    "alumniOf": {
+      "@type": "EducationalOrganization",
+      "name": "NMIMS",
+      "department": "Mechatronics Engineering"
+    },
+    "knowsAbout": [
+      "Software Engineering",
+      "Frontend Development",
+      "Machine Learning",
+      "Robotics",
+      "React",
+      "Node.js",
+      "JavaScript",
+      "Python",
+      "C++",
+      "Algorithm Visualization",
+      "MERN Stack"
+    ],
+    "sameAs": [
+      "https://github.com/dan10ish",
+      "https://x.com/dan10ish",
+      "https://instagram.com/dan10ish",
+      "https://linkedin.com/in/dan10ish"
+    ],
+    "email": "aansaridan@gmail.com",
+    "description": "Frontend Software Engineer and Mechatronics Developer building solutions at the intersection of hardware and software. Expert in React, Node.js, Machine Learning, and Robotics."
+  }
+  </script>
 </head>
 
 <body>
