--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="keywords" content="Danish Ansari, Software Engineer, Frontend Developer, Mechatronics Engineer, React Developer, Machine Learning, Robotics, Algorithm Visualization, MERN Stack, JavaScript, Python, C++, Portfolio, Web Developer, Full Stack Developer, AI, Pathfinding, 3DOF Robotic Arm, dan10ish" />
   <meta name="author" content="Danish Ansari" />
   <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
-  <meta name="theme-color" content="#11112D" />
+  <meta name="theme-color" content="" />
   <meta property="og:title" content="Danish Ansari - Frontend Software Engineer & Mechatronics Developer" />
   <meta property="og:description" content="Frontend SWE at Cridaa | Expert in React, Node.js, Machine Learning & Robotics | Building innovative solutions at the intersection of hardware and software | Portfolio showcasing 13+ projects" />
   <meta property="og:image" content="https://i.ibb.co/bQpCQ1J/OG.png" />
