--- a/index.html
+++ b/index.html
@@ -3,34 +3,36 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="/icon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <title>Danish Ansari - Frontend Software Engineer | React & Machine Learning Expert</title>
-  <meta name="description" content="Danish Ansari - Frontend Software Engineer & Mechatronics Developer. Expert in React, Node.js, Machine Learning, Robotics & Algorithm Visualization. Building solutions at the intersection of hardware and software." />
-  <meta name="keywords" content="Danish Ansari, Software Engineer, Frontend Developer, Mechatronics Engineer, React Developer, Machine Learning, Robotics, Algorithm Visualization, MERN Stack, JavaScript, Python, C++, Portfolio, Web Developer, Full Stack Developer, AI, Pathfinding, 3DOF Robotic Arm, dan10ish" />
+  <title>Danish Ansari</title>
+  <meta name="description" content="Danish is a mechatronics engineer exploring machine learning, robotics and finance. This is his personal website." />
+  <meta name="keywords" content="Danish, ai, artificial intelligence, Danish Ansari, Danish Mumbai, mechatronics, robotics, machine learning, developer, engineer, portfolio" />
   <meta name="author" content="Danish Ansari" />
   <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
   <meta name="theme-color" content="" />
-  <meta property="og:title" content="Danish Ansari - Frontend Software Engineer & Mechatronics Developer" />
-  <meta property="og:description" content="Frontend SWE at Cridaa | Expert in React, Node.js, Machine Learning & Robotics | Building innovative solutions at the intersection of hardware and software | Portfolio showcasing 13+ projects" />
-  <meta property="og:image" content="https://i.ibb.co/bQpCQ1J/OG.png" />
-  <meta property="og:image:alt" content="Danish Ansari - Software Engineer Portfolio" />
+  <meta property="og:title" content="Danish Ansari" />
+  <meta property="og:description" content="Danish's personal website featuring his projects, technical writings, and insights in robotics and machine learning." />
+  <meta property="og:image" content="https://i.ibb.co/vmBrhSd/OG.png" />
+  <meta property="og:image:alt" content="Danish's Portfolio Preview" />
   <meta property="og:url" content="https://dan10ish.github.io" />
   <meta property="og:type" content="website" />
-  <meta property="og:site_name" content="Danish Ansari Portfolio" />
+  <meta property="og:site_name" content="Danish" />
   <meta property="og:locale" content="en_US" />
   <meta property="og:image:width" content="1200" />
-  <meta property="og:image:height" content="630" />
+  <meta property="og:image:height" content="675" />
   <meta property="og:image:type" content="image/png" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@dan10ish" />
   <meta name="twitter:creator" content="@dan10ish" />
-  <meta name="twitter:title" content="Danish Ansari - Frontend Software Engineer & Mechatronics Developer" />
-  <meta name="twitter:description" content="Frontend SWE at Cridaa | Expert in React, Node.js, Machine Learning & Robotics | Building innovative solutions at the intersection of hardware and software" />
-  <meta name="twitter:image" content="https://i.ibb.co/bQpCQ1J/OG.png" />
-  <meta name="twitter:image:alt" content="Danish Ansari - Software Engineer Portfolio" />
+  <meta name="twitter:title" content="Danish Ansari" />
+  <meta name="twitter:description" content="Danish's personal website featuring his projects, technical writings, and insights in robotics and machine learning." />
+  <meta name="twitter:image" content="https://i.ibb.co/vmBrhSd/OG.png" />
+  <meta name="twitter:image:alt" content="Danish's Portfolio Preview" />
   <meta property="article:author" content="Danish Ansari" />
   <meta name="linkedin:owner" content="dan10ish" />
+  <meta name="profile:username" content="dan10ish" />
+  <meta name="profile:first_name" content="Danish" />
   <link rel="canonical" href="https://dan10ish.github.io" />
   <script type="application/ld+json">
   {
@@ -38,29 +40,20 @@
     "@type": "Person",
     "name": "Danish Ansari",
     "url": "https://dan10ish.github.io",
-    "image": "https://i.ibb.co/bQpCQ1J/OG.png",
-    "jobTitle": "Frontend Software Engineer",
-    "worksFor": {
-      "@type": "Organization",
-      "name": "Cridaa"
-    },
+    "image": "https://i.ibb.co/vmBrhSd/OG.png",
+    "jobTitle": "Mechatronics Engineer",
     "alumniOf": {
       "@type": "EducationalOrganization",
       "name": "NMIMS",
       "department": "Mechatronics Engineering"
     },
     "knowsAbout": [
-      "Software Engineering",
-      "Frontend Development",
+      "Mechatronics",
       "Machine Learning",
       "Robotics",
-      "React",
-      "Node.js",
-      "JavaScript",
-      "Python",
-      "C++",
-      "Algorithm Visualization",
-      "MERN Stack"
+      "Artificial Intelligence",
+      "Finance",
+      "Engineering"
     ],
     "sameAs": [
       "https://github.com/dan10ish",
@@ -69,7 +62,7 @@
       "https://linkedin.com/in/dan10ish"
     ],
     "email": "aansaridan@gmail.com",
-    "description": "Frontend Software Engineer and Mechatronics Developer building solutions at the intersection of hardware and software. Expert in React, Node.js, Machine Learning, and Robotics."
+    "description": "Danish is a mechatronics engineer exploring machine learning, robotics and finance. This is his personal website."
   }
   </script>
 </head>
